--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10"
         tools:context=".FeedActivity">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/feedRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="520dp"
             android:scrollbars="vertical"
+            android:layout_weight="9"
+            android:layout_margin="5dp"
             tools:layout_editor_absoluteY="8dp"
             tools:layout_editor_absoluteX="8dp"/>
 
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/feedRecyclerView"
             android:orientation="horizontal"
-            android:layout_alignParentBottom="true"
+            android:layout_weight="1"
             android:layout_margin="5dp">
 
         <EditText
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/chatEditText"
-                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:hint="Enter your message"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/chatSendButton"
                 android:text="Send"
+                android:background="#EE9D85"
                 android:onClick="sendMessage"/>
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
