--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_alignParentBottom="true"
         android:weightSum="10"
         tools:context=".FeedActivity">
 
@@ -14,27 +15,31 @@
             android:layout_height="520dp"
             android:scrollbars="vertical"
             android:layout_weight="9"
-            android:layout_margin="5dp"
+            android:descendantFocusability="beforeDescendants"
             tools:layout_editor_absoluteY="8dp"
             tools:layout_editor_absoluteX="8dp"/>
 
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_weight="1"
+            android:weightSum="10"
             android:layout_margin="5dp">
 
         <EditText
-                android:layout_width="320dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/chatEditText"
+                android:layout_weight="8"
                 android:layout_marginEnd="5dp"
+                android:imeOptions="actionDone"
+                android:inputType="text"
                 android:hint="Enter your message"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/chatSendButton"
+                android:layout_weight="2"
                 android:text="Send"
                 android:background="#EE9D85"
                 android:onClick="sendMessage"/>
