--- a/app/src/main/res/layout/recycler_list_row.xml
+++ b/app/src/main/res/layout/recycler_list_row.xml
@@ -2,11 +2,18 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/recycler_textView"/>
+            android:id="@+id/recycler_textView"
+            android:padding="8dp"
+            android:textSize="16sp"
+            android:textColor="#ffffff"
+            android:background="@drawable/rounded_text_message"/>
 
 </FrameLayout>
